--- a/website/02-Education/moocs/upcoming-moocs.html
+++ b/website/02-Education/moocs/upcoming-moocs.html
@@ -1,9 +1,25 @@
-<p class="title_table_courses">MOOCs</p>
-<div class="info_and_button">
-<div class="course_info">
-<p class="data">27 April – 21 June 2020</p>
-<p class="title_course titolo_gc_europe">Memory Sites and Human Rights</p>
-<p>In a world of violent conflicts where the truth on past and present abuses is often manipulated, creating memorials such as historic sites, monuments, museums or art projects helps us raise awareness of the suffering and embrace the ideal of “never again!”</p>
+<!-- BOX 1 -->
+<div class="programma_gc gc_generic">
+    <p class="categoria_upcaming_courses">MOOCs</p>
+    <h4 class="titolo_white_box titolo_gc_europe">Monitoring the Human Rights of LGBTI Persons <span style="color: gray;">[2nd edition]</span></h4>
+    <p class="margin_bottom_75">This MOOC provides an overview of human rights standards, mechanisms and practices for the protection of LGBTI persons around the world.</p>
+    <p class="stagione_programma">Winter / Spring 2020</p>
 </div>
-<p class="space">[nbsp]</p>
-<a href="{{link_url::314}}"> <button class="button button--aylen button_gray button--aylen_gray no_margin_bottom">More info</button> </a></div>
+
+
+<!-- BOX 2 -->
+<div class="programma_gc gc_generic">
+    <p class="categoria_upcaming_courses">MOOCs</p>
+    <h4 class="titolo_white_box titolo_gc_europe">Monitoring the Human Rights of LGBTI Persons <span style="color: gray;">[2nd edition]</span></h4>
+    <p class="margin_bottom_75">This MOOC provides an overview of human rights standards, mechanisms and practices for the protection of LGBTI persons around the world.</p>
+    <p class="stagione_programma">Winter / Spring 2020</p>
+</div>
+
+
+<!-- BOX 3 -->
+<div class="programma_gc gc_generic">
+    <p class="categoria_upcaming_courses">MOOCs</p>
+    <h4 class="titolo_white_box titolo_gc_europe">Monitoring the Human Rights of LGBTI Persons <span style="color: gray;">[2nd edition]</span></h4>
+    <p class="margin_bottom_75">This MOOC provides an overview of human rights standards, mechanisms and practices for the protection of LGBTI persons around the world.</p>
+    <p class="stagione_programma">Winter / Spring 2020</p>
+</div>
