upcoming-moocs initial draft

--- a/website/02-Education/moocs/upcoming-moocs.html
+++ b/website/02-Education/moocs/upcoming-moocs.html
@@ -1,25 +1,25 @@
 <!-- BOX 1 -->
 <div class="programma_gc gc_generic">
     <p class="categoria_upcaming_courses">MOOCs</p>
-    <h4 class="titolo_white_box titolo_gc_europe">Monitoring the Human Rights of LGBTI Persons <span style="color: gray;">[2nd edition]</span></h4>
-    <p class="margin_bottom_75">This MOOC provides an overview of human rights standards, mechanisms and practices for the protection of LGBTI persons around the world.</p>
-    <p class="stagione_programma">Winter / Spring 2020</p>
+    <h4 class="titolo_white_box titolo_gc_europe">Business and Human Rights</h4>
+    <p class="margin_bottom_75">Applying a multi-regional approach, the MOOC focuses on the link between companies and human rights defenders, including consideration of the UN Guiding Principles, recent case-law, and child labour issues.</p>
+    <p class="stagione_programma">Winter 2020</p>
 </div>
 
 
 <!-- BOX 2 -->
 <div class="programma_gc gc_generic">
     <p class="categoria_upcaming_courses">MOOCs</p>
-    <h4 class="titolo_white_box titolo_gc_europe">Monitoring the Human Rights of LGBTI Persons <span style="color: gray;">[2nd edition]</span></h4>
-    <p class="margin_bottom_75">This MOOC provides an overview of human rights standards, mechanisms and practices for the protection of LGBTI persons around the world.</p>
-    <p class="stagione_programma">Winter / Spring 2020</p>
+    <h4 class="titolo_white_box titolo_gc_europe">Children’s Rights and Technology in the Digital Age</h4>
+    <p class="margin_bottom_75">Digital technologies have already shifted the dynamic of many homes, classrooms, and multimedia platforms, but is the child’s best interest central to these experiences? How will they shape the minds and behaviours of the coming generations?</p>
+    <p class="stagione_programma">Spring 2021</p>
 </div>
 
 
 <!-- BOX 3 -->
 <div class="programma_gc gc_generic">
     <p class="categoria_upcaming_courses">MOOCs</p>
-    <h4 class="titolo_white_box titolo_gc_europe">Monitoring the Human Rights of LGBTI Persons <span style="color: gray;">[2nd edition]</span></h4>
-    <p class="margin_bottom_75">This MOOC provides an overview of human rights standards, mechanisms and practices for the protection of LGBTI persons around the world.</p>
-    <p class="stagione_programma">Winter / Spring 2020</p>
+    <h4 class="titolo_white_box titolo_gc_europe">Child participation and the right to a sustainable environment</h4>
+    <p class="margin_bottom_75">By speaking to young climate activists as well as children’s rights specialists, environment experts and human rights scholars, the MOOC will examine concepts, standards and practices of child participation in environmental matters.</p>
+    <p class="stagione_programma">Summer 2021</p>
 </div>
