some small additions

--- a/website/02-Education/moocs/upcoming-moocs.html
+++ b/website/02-Education/moocs/upcoming-moocs.html
@@ -1,7 +1,7 @@
 <!-- BOX 1 -->
 <div class="programma_gc gc_generic">
     <p class="categoria_upcaming_courses">MOOCs</p>
-    <h4 class="titolo_white_box titolo_gc_europe">Business and Human Rights</h4>
+    <h4 class="titolo_white_box titolo_gc_europe">Business and Human Rights</h4><br style="line-height: 36px">
     <p class="margin_bottom_75">Applying a multi-regional approach, the MOOC focuses on the link between companies and human rights defenders, including consideration of the UN Guiding Principles, recent case-law, and child labour issues.</p>
     <p class="stagione_programma">Winter 2020</p>
 </div>
