--- a/website/02-Education/moocs/pphr/media-toolkit.html
+++ b/website/02-Education/moocs/pphr/media-toolkit.html
@@ -33,7 +33,7 @@
                 <div class="orizzontale">[nbsp]</div>
             </div>
         </div>
-        <div class="list_accordion"><iframe style="width: 100%; height: 300px; border: 0;" src="https://drive.google.com/embeddedfolderview?id=1zL11vIHZUvrSUfU1Hgl8GWBM0kcu0-Ul#grid"></iframe></div>
+        <div class="list_accordion"><iframe src="https://drive.google.com/embeddedfolderview?id=1EmoV3tEVQ2XX96AARe_AVTEWoluMLtNc#grid" style="width:100%; height:600px; border:0;"></iframe>/div>
     </div>
 </div>
 
