fixed once and for all dark mode on blog

--- a/edx/abouts/mooc-pphr.html
+++ b/edx/abouts/mooc-pphr.html
@@ -110,25 +110,37 @@ h3{
         <div class="col">&nbsp;</div>
     </div>
         <div class="row col-12">
-        <div class="col-3">
+        <div class="col-2">
             <a href="#manfrednowak" target="_blank" class="titolo_gc_europe manfrednowak"><img src="https://gchumanrights.org/files/eiuc/staff/Manfred_Nowak_global_campus_eiuc.jpg" class="img-center" width="110px"><br>
 
             <p class="text-center"><span style="color: #76716d;">Manfred Nowak</span></p></a>
         </div>
 
-        <div class="col-3">
+        <div class="col-2">
             <a href="#felipegomez" target="_blank" class="titolo_gc_europe felipegomez"><img src="https://gchumanrights.org/files/eiuc/Felipe_Gomez_Isa.jpg" class="img-center" width="110px"><br>
 
-            <p class="text-center titolo_gc_south_east_europe">Felipe Gómez Isa</p></a>
+            <p class="text-center titolo_gc_europe">Felipe Gómez Isa</p></a>
         </div>
 
-        <div class="col-3">
-            <a href="#jeremygunn" target="_blank" class="titolo_gc_arab jeremygunn" style="color: #f08c22"><img src="https://gchumanrights.org/files/eiuc/moocs/mshr/Jeremy_Gunn_global_campus_eiuc.jpg" class="img-center" width="110px"><br>
+        <div class="col-2">
+            <a href="#fransviljoen" target="_blank" class="titolo_gc_africa fransviljoen"><img src="https://gchumanrights.org/files/eiuc/mooclgbti/Frans-Viljoen.jpg" class="img-center" width="110px"><br>
 
-            <p class="text-center titolo_gc_arab" style="color: #f08c22">T. Jeremy Gunn</a>
+            <p class="text-center titolo_gc_africa"><span class="titolo_gc_africa">Frans Viljoen</span></a>
         </div>
 
-        <div class="col-3">
+        <div class="col-2">
+            <a href="#veronicagomez" target="_blank" class="titolo_gc_latin_america veronicagomez"><img src="https://gchumanrights.org/files/eiuc/img_global_campus_chair.jpg" class="img-center" width="110px"><br>
+
+            <p class="text-center titolo_gc_latin_america">Veronica Gomez</p></a>
+        </div>
+
+        <div class="col-2">
+            <a href="#bencharatchua" target="_blank" class="titolo_gc_asia_pacific bencharatchua"><img src="https://gchumanrights.org/files/eiuc/moocs/mshr/Prajak_Kongkirati_global_campus_eiuc.jpg" class="img-center" width="110px"><br>
+
+            <p class="text-center titolo_gc_asia_pacific">Bencharat Chua</p></a>
+        </div>
+
+        <div class="col-2">
             <a href="#prajac" target="_blank" class="titolo_gc_asia_pacific prajac"><img src="https://gchumanrights.org/files/eiuc/moocs/mshr/Prajak_Kongkirati_global_campus_eiuc.jpg" class="img-center" width="110px"><br>
 
             <p class="text-center titolo_gc_asia_pacific">Prajak Kongkirati</p></a>
@@ -182,61 +194,60 @@ h3{
         <p class="margin_bottom_20">He was Director of the Netherlands Institute of Human Rights at Utrecht University (SIM: 1987-1989) and of the Ludwig Boltzmann Institute of Human Rights at Vienna University (BIM: 1992-2019) as well as Visiting Professor at the University of Lund (2002-2003), the Graduate Institute of International and Development Studies in Geneva (2008-2009), and at Stanford University in Palo Alto (2014).</p>
 
         <p class="margin_bottom_20">He is author of more than 600 publications in the fields of public and international law and human rights.</p>
-               
+
 </div>
 
 <div id="felipegomez" style="display:none;">
-    <img src="https://gchumanrights.org/files/eiuc/moocs/mshr/Vesna_Terselic_global_campus_eiuc.jpg" class="img-center" width="110px">
+    <img src="https://gchumanrights.org/files/eiuc/Felipe_Gomez_Isa.jpg" class="img-center" width="110px">
 
-    <p class="subtitle_page_programme lecturer_name">Vesna Teršelič</p>
+    <p class="subtitle_page_programme lecturer_name">Felipe Gómez Isa</p>
 
-    <p class="ruolo_persona titolo_gc_south_east_europe margin_bottom_20 centeredtext"><span style="color: #76716d;">Director of Documenta - Centre for Dealing with the Past</span></p>
+    <p class="ruolo_persona titolo_gc_europe margin_bottom_20 centeredtext">Professor of Public International Law and researcher at the Pedro Arrupe Institute of Human Rights of the University of Deusto</p>
 
-    <p class="margin_bottom_20">Vesna Teršelić (1962) was born in Ljubljana, and currently lives in Croatia. She studied at the Faculty of Philosophy and at the Faculty of Science and Mathematics in Zagreb. She is a co-founder of several environmental, women and peace organizations (Svarun, Green Action, Anti-war Campaign of Croatia, Centre for Women's Studies, Centre for Peace Studies etc).</p>
+    <p class="margin_bottom_20">Felipe Gómez Isa is Professor of Public International Law and researcher at the Pedro Arrupe Institute of Human Rights of the University of Deusto (Bilbao, The Basque Country, Spain).</p>
 
-    <p class="margin_bottom_20">She has been involved in the organization of public actions and petitions (Peace Gates, Zagreb, 1991), My Voice for the Rule of Law (Trg Bana Jelačića, Zagreb, 2001), and a protest and a petition signing for the removal of the monument to the commander of the Ustasha Black Legion (Slunj, 2001).</p>
+    <p class="margin_bottom_20">He was Spanish Representative before the UN open-ended working group for the adoption of the Optional Protocol to CEDAW. He has been Director of the UN Fellowship Programme for Human Rights Education to Latin American indigenous peoples.</p>
 
-    <p class="margin_bottom_20">Since 2004, she is Director of the Documenta - Centre for Dealing with the Past. She is member of Regional Advisory Council of Coalition for REKOM. She was awarded the Right Livelihood Award (1998), also known as an "Alternative Nobel Prize" and nominated for the Nobel Peace Prize (1997).</p>
+    <p class="margin_bottom_20">He has published extensively on issues such as international protection of human rights, transitional justice or indigenous peoples' rights. He is National Director of the EMA and Vice-Dean for International Relations of Deusto Law School.</p>
 
     
 </div>
 
-<div id="jeremygunn" style="display:none;">
-    <img src="https://gchumanrights.org/files/eiuc/moocs/mshr/Jeremy_Gunn_global_campus_eiuc.jpg" class="img-center" width="110px">
+<div id="fransviljoen" style="display:none;">
+    <img src="https://gchumanrights.org/files/eiuc/mooclgbti/Frans-Viljoen.jpg" class="img-center" width="110px">
 
-    <p class="subtitle_page_programme lecturer_name">T. Jeremy Gunn</p>
+    <p class="subtitle_page_programme lecturer_name">Frans Viljoen</p>
 
-    <p class="ruolo_persona titolo_gc_arab margin_bottom_20 centeredtext"><span class="titolo_gc_asia_pacific"><span class="maiuscoletto">arma</span> Lecturer</span></p>
+    <p class="ruolo_persona titolo_gc_africa margin_bottom_20 centeredtext"><span class="titolo_gc_africa">Director of the Centre for Human Rights in the Faculty of Law, University of Pretoria</span></p>
 
-    <p class="margin_bottom_20">T. Jeremy Gunn is Professor of Law and Political Science at l’Université Internationale de Rabat (Morocco) and Lecturer on the Global Campus Arab Master’s Programme in Democracy and Human Rights.</p>
+    <p class="margin_bottom_20">Prof. Frans Viljoen is the Director of the Centre for Human Rights in the Faculty of Law, University of Pretoria.</p>
 
-    <p class="margin_bottom_20">He received a Ph.D. from Harvard University, a Juris Doctor degree from Boston University (magna cum laude), and an A.M. from the University of Chicago. He was formerly a Senior Fellow at the United States Institute of Peace and has worked at the U.S. State Department, and the American Civil Liberties Union.</p>
+    <p class="margin_bottom_20">His area of research is regional human rights protection, with particular emphasis on the African Union human rights standards, institutions and processes within their socio-economic and political context.</p>
 
-    <p class="margin_bottom_20">Ms. Devandas Aguilar was previously part of the disability rights movement at national, regional and international level and continues to work closely with organisations of persons with disabilities.</p>
+    <p class="margin_bottom_20">He is the author of International human rights law in Africa, which is one of the leading texts on the African human rights system. In 2000, he became the founding editor of the leading journal on human rights in Africa, the African Human Rights Law Journal, and has since then served as editor-in-chief for this publication.</p>
 
-    <p class="margin_bottom_20">Among his publications are “<em>The Concept of ‘Separation of Religion and the State’ in Islam</em>” (2016), “<em>The Organisation of Islamic Cooperation: Universal Human Rights, Islamic Values, or Raisons d’état?</em>” (2017) (with Alvaro Lagresa), “<em>Secularism, the Secular, and Secularization</em>” in Trends of Secularism in a Pluralistic World (2013), Spiritual Weapons: The Cold War and the Forging of an American National Religion (2009), “<em>Religious Freedom and Laïcité: A Comparison of the United States and France</em>” (2004), and “<em>The Complexity of Religion and the Definition of ‘Religion’ in International Law</em>” (2003).</p>
+    <p class="margin_bottom_20">Since 2017 he has been serving as founding editor of the African Human Rights Yearbook and the Global Campus Human Rights Journal.</p>
+
+    <p class="margin_bottom_20">He has served as visiting professor at several universities worldwide. Frans leads a number of teams that supported aspects of the mandate for special mechanisms of the African Commission on Human and Peoples’ Rights.</p>
 </div>
 
-<div id="prajac" style="display:none;">
-    <img src="https://gchumanrights.org/files/eiuc/moocs/mshr/Prajak_Kongkirati_global_campus_eiuc.jpg" class="img-center" width="110px">
+<div id="veronicagomez" style="display:none;">
+    <img src="https://gchumanrights.org/files/eiuc/img_global_campus_chair.jpg" class="img-center" width="110px">
 
-    <p class="subtitle_page_programme lecturer_name">Prajak Kongkirati</p>
+    <p class="subtitle_page_programme lecturer_name">Veronica Gomez</p>
 
-    <p class="ruolo_persona titolo_gc_asia_pacific margin_bottom_20 centeredtext"><span class="titolo_gc_asia_pacific">Research Director of the Faculty of Political Science, Thammasat University, Thailand</span></p>
+    <p class="ruolo_persona titolo_gc_latin_america margin_bottom_20 centeredtext"><span class="titolo_gc_asia_pacific">GC President</span></p>
 
-    <p class="margin_bottom_20">Assistant Professor Prajak Kongkirati is Research Director of the Faculty of Political Science, Thammasat University, Thailand. Former Head of Southeast Asian Studies Center, East Asian Institute, Thammasat University, he is also visiting fellow at ISEAS Institute, Singapore.</p>
+    <p class="margin_bottom_20">Veronica Gomez is the current Global Campus President. She is the Co-Director of the Master’s Programme in Human Rights and Democratisation in Latin America and the Caribbean (LATMA).</p>
 
-    <p class="margin_bottom_20">Prajak received his MA from the University of Wisconsin-Madison in 2008 support by the Harvard-Yenching Scholarship for Graduate Program, and Ph.D. from the Department of Political and Social Change, ANU in 2013, with a dissertation titled “Bosses, Bullets and Ballots: Electoral Violence and Democracy in Thailand, 1975-2011.” His study has been supported by the Australian Leadership Award (ALA) of AusAID. He has been actively involved in various professional and academic activities with the government, private sectors and civil society organizations: a Country Expert (Thailand) for The Varieties of Democracy Project (V-Dem) (2015-present); a Committee Member of Peace Information Center, Thammasat University (2015-present); Project Manager, Civic Education and Democracy Training Program for Teachers, Faculty of Political Science, Thammasat University in collaboration with the Thai Civic Education Network (2014-present); Editorial Board of Thammasat Review of Economic and Social Policy, Thailand (2015-present); Editorial Board of the Asian Democracy Review Journal, Korea (2013-present); Executive Committee, Foundation for Democracy and Development Studies, Bangkok (2013-present); Translator and consultant, International Crisis Group, Thailand (2009-2011).</p>
+    <p class="margin_bottom_20">Her professional path includes her role as Principal Specialist at the Inter-American Commission of Human Rights of the Organisation of American States in Washington (1998-2009) and as a Senior Advisor on Human Rights at the Ministry of Foreign Affairs of Argentina (2010-2011).</p>
 
-    <p class="margin_bottom_20">He is also editorial board of Asian Democracy Review and has published widely in the field of Thai politics, conflict and violence, party and electoral politics, democratization, social movements, and youth politics and education. His comments on Thai politics have been regularly appeared in many Thai-and English-language newspapers, magazines and Television Channels.</p>
-
-    <p class="margin_bottom_20">His recent research projects focused on democracy, corruption, violence and elections in Thailand. His current project “Political Dynamics of Electoral Politics and Democracy in ASEAN: A Comparative Case Studies of Malaysia, Indonesia and the Philippines” is supported by the Thailand Research Fund’s research grant (2017-2018).</p>
 </div>
 
-<div id="alejandranaftal" style="display:none;">
+<div id="bencharatchua" style="display:none;">
     <img src="https://gchumanrights.org/files/eiuc/moocs/mshr/Alejandra_Naftal_global_campus_eiuc.jpg" class="img-center" width="110px">
 
-    <p class="subtitle_page_programme lecturer_name">Alejandra Naftal</p>
+    <p class="subtitle_page_programme lecturer_name">Bencharat Chua</p>
 
     <p class="ruolo_persona titolo_gc_latin_america margin_bottom_20 centeredtext"><span class="titolo_gc_latin_america">Executive Director and co-curator of the ESMA Memory Site Museum</span></p>
 
@@ -274,16 +285,16 @@ $(".felipegomez").modaal({
 content_source: '#felipegomez'
 });
 
-$(".jeremygunn").modaal({
-content_source: '#jeremygunn'
+$(".fransviljoen").modaal({
+content_source: '#fransviljoen'
 });
 
-$(".prajac").modaal({
-content_source: '#prajac'
+$(".veronicagomez").modaal({
+content_source: '#veronicagomez'
 });
 
-$(".alejandranaftal").modaal({
-content_source: '#alejandranaftal'
+$(".bencharatchua").modaal({
+content_source: '#bencharatchua'
 });
 
 $(".jasminko").modaal({
