faq initial commit

--- a/edx/abouts/mooc-pphr.html
+++ b/edx/abouts/mooc-pphr.html
@@ -76,6 +76,20 @@ h3{
     background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
 }
+
+.title_accordion {
+  font-size:16px;
+  line-height:18px;
+  font-weight:400
+}
+
+.text_accordion {
+  font-size:16px;
+  line-height:22px;
+  margin-top:10px;
+  margin-left:20px;
+  display:none
+}
 </style>
 <meta property="og:image" content="https://gchumanrights.org/files/eiuc/social/social_pphr.png" />
 <!--<div class="ce_text description_page_programme block">
@@ -159,27 +173,7 @@ h3{
         <li>Capacity to discuss specific areas and groups/cases of concern</li>
     </ul>
     <p>
-</div><!-- SHARE http://www.sharelinkgenerator.com/ -->
-<div class="ce_text last block shareonmedia">
-    <p class="subtitle_page_programme">Share on</p>
-    <div class="socialnt" style="font-size:16px; padding-right: 15px;">
-        <ul class="social-share">
-            <li class="facebook">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fedx.gchumanrights.org%2Fcourses%2Fcourse-v1%3Agchumanrights%2Bpphr%2B2020%2Fabout" target="_blank" onclick="window.open(this.href,'','width=600,height=200,modal=yes,left=100,top=50,location=no,menubar=no,resizable=yes,scrollbars=yes,status=no,toolbar=no');return false"><em class="fa fa-facebook fa-4"></em></a>
-            </li>
-            <li class="twitter">
-                <a id="tweet" class="titolo_gc_europe" href="https://twitter.com/intent/tweet?text=https%3A%2F%2Fedx.gchumanrights.org%2Fcourses%2Fcourse-v1%3Agchumanrights%2Bpphr%2B2020%2Fabouty" onclick="window.open(this.href,'','width=640,height=380,modal=yes,left=100,top=50,location=no,menubar=no,resizable=yes,scrollbars=yes,status=no,toolbar=no');return false"><em class="fa fa-twitter fa-4"></em></a>
-            </li>
-            <li class="linkedin">
-                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fedx.gchumanrights.org%2Fcourses%2Fcourse-v1%3Agchumanrights%2Bpphr%2B2020%2Fabout" rel="nofollow" title="" onclick="window.open(this.href,'','width=600,height=550,modal=yes,left=100,top=50,location=no,menubar=no,resizable=yes,scrollbars=yes,status=no,toolbar=no');return false"><em class="fa fa-linkedin fa-4"></em></a>
-            </li>
-            <li class="print" style="border-bottom: 1px solid #e0dfdf">
-                <a href="" rel="nofollow" title="" onclick="window.print();return false"><em class="fa fa-print fa-4"></em></a>
-            </li>
-        </ul>
-    </div>
 </div>
-
 <div class="ce_text description_page_programme block">
     <p class="subtitle_page_programme">F.A.Q.s</p>
 
@@ -312,7 +306,7 @@ h3{
                         <h3 id="i-have-the-citizenship-of-canada-e-g-can-i-apply-for-the-erma-programme">Is there a schedule for the course or is it self-directed?</h3>
 
                         <div class="ce_text block">
-                            <p>The course is self-paced so participants can study in their own time. However, to enhance peer learning, interactive participation and self-assessment, weekly topics and discussions as well as module quizzes are proposed at set dates. In any case, they are all open until the end of the course to facilitate access and completion at any preferred time. For a detailed description of the schedule check the <a class="titolo_gc_europe" href="hhttps://gchumanrights.org/education/e-learning/moocs/memory-sites-and-human-rights/course-outline.html" target="_blank">course outline page</a> on our website.</p>
+                            <p>The course is self-paced so participants can study in their own time.</p>
 
                         </div>
                     </section>
@@ -377,21 +371,21 @@ h3{
                 </div>
             </div>
 
-            <p class="title_accordion titolo_gc_europe">Certificate of participation</p>
+            <p class="title_accordion titolo_gc_europe">Certificate of completion</p>
         </div>
 
         <div class="text_accordion">
             <div class="mod_faqpage mod_faqpage description_page_programme_no_border no_margin_bottom block block">
                 <article class="first even">
                     <section class="first even">
-                        <h3 id="i-have-the-citizenship-of-canada-e-g-can-i-apply-for-the-erma-programme">What do I need to do to get the certificate of participation?</h3>
+                        <h3 id="i-have-the-citizenship-of-canada-e-g-can-i-apply-for-the-erma-programme">What do I need to do to get the certificate of completion?</h3>
 
                         <div class="ce_text block">
-                            <p>At the end of the course, if you have actively contributed in at least 4 weekly discussions and successfully passed 4 quizzes, you will receive a certificate confirming your participation. Before submitting your request in the certificate page, please make sure you have submitted the Welcome Survey and the User Experience Survey.</p>
+                            <p>Given the flexible nature of the MOOC, it would be complex to issue a certificate for each varying degree and level of completion. For this reason, we give you the possibility to either audit the course to the extent that you wish or earn a certificate of participation upon completion of all 7 classes. If you decide to audit the course, you will not receive a certificate, but you can print your progress page if you want evidence of your achievement. If you would like or need to have official proof that you have completed this MOOC, we offer you the option of requesting a Certificate of Completion with a Transcript of Records. In order to do so, you will have to successfully complete and pass all the 7 Classes of the course and related Quizzes.</p>
                         </div>
                     </section>
 
-                    <!--
+                   
                     <section class="odd">
                         <h3 id="i-have-the-citizenship-of-kosovo-can-i-apply-for-the-erma-programme">Why should I request a certificate?</h3>
 
@@ -399,12 +393,13 @@ h3{
                             <p>If you plan to use your course for job applications, promotions, or school applications, you may prefer to have a certificate that is officially signed and accompanied by a transcript of records. It is also a great way to give yourself an incentive to complete the course and celebrate your success.</p>
                         </div>
                     </section>
-
+                    
                     <section class="even">
                         <h3 id="i-have-finished-a-three-year-ba-and-a-one-year-ma-with-a-total-of-240-ects-am-i-eligible-for-the-programme">I am not interested in a certificate. Can I still audit a course?</h3>
 
                         <div class="ce_text block">
-                            <p>Yes. All our courses can be audited for free. If you audit a course, you can participate in any or all activities and quizzes and complete them, but you will not receive a certificate. Do you still want some proof of participation? You can simply print the progress chart that you will find in your course page.</p>
+                            <p>Yes. All our courses can be audited for free. If you audit a course, you can participate in any or all activities and quizzes and complete them, but you will not receive a certificate. Do you still want some proof of participation? You can simply print the progress chart that you will find in your course page.
+</p>
                         </div>
                     </section>
                     -->
@@ -415,9 +410,26 @@ h3{
 
     <p class="margin_bottom_10">&nbsp;</p>
 </div>
-
-
-
+<!-- SHARE http://www.sharelinkgenerator.com/ -->
+<div class="ce_text last block shareonmedia">
+    <p class="subtitle_page_programme">Share on</p>
+    <div class="socialnt" style="font-size:16px; padding-right: 15px;">
+        <ul class="social-share">
+            <li class="facebook">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fedx.gchumanrights.org%2Fcourses%2Fcourse-v1%3Agchumanrights%2Bpphr%2B2020%2Fabout" target="_blank" onclick="window.open(this.href,'','width=600,height=200,modal=yes,left=100,top=50,location=no,menubar=no,resizable=yes,scrollbars=yes,status=no,toolbar=no');return false"><em class="fa fa-facebook fa-4"></em></a>
+            </li>
+            <li class="twitter">
+                <a id="tweet" class="titolo_gc_europe" href="https://twitter.com/intent/tweet?text=https%3A%2F%2Fedx.gchumanrights.org%2Fcourses%2Fcourse-v1%3Agchumanrights%2Bpphr%2B2020%2Fabouty" onclick="window.open(this.href,'','width=640,height=380,modal=yes,left=100,top=50,location=no,menubar=no,resizable=yes,scrollbars=yes,status=no,toolbar=no');return false"><em class="fa fa-twitter fa-4"></em></a>
+            </li>
+            <li class="linkedin">
+                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fedx.gchumanrights.org%2Fcourses%2Fcourse-v1%3Agchumanrights%2Bpphr%2B2020%2Fabout" rel="nofollow" title="" onclick="window.open(this.href,'','width=600,height=550,modal=yes,left=100,top=50,location=no,menubar=no,resizable=yes,scrollbars=yes,status=no,toolbar=no');return false"><em class="fa fa-linkedin fa-4"></em></a>
+            </li>
+            <li class="print" style="border-bottom: 1px solid #e0dfdf">
+                <a href="" rel="nofollow" title="" onclick="window.print();return false"><em class="fa fa-print fa-4"></em></a>
+            </li>
+        </ul>
+    </div>
+</div>
 <div id="manfrednowak" style="display:none;">
 
         <img src="https://gchumanrights.org/files/eiuc/staff/Manfred_Nowak_global_campus_eiuc.jpg" class="img-center" width="110px" >
