minimal fixes to faqs about edx button enrol on how to enrol redirect correctly to edx

--- a/website/02-Education/moocs/pphr/how-to-enrol.html
+++ b/website/02-Education/moocs/pphr/how-to-enrol.html
@@ -1,5 +1,43 @@
-<p class="subtitle_page_programme">How to Enrol</p>
-<p class="margin_bottom_20">The MOOC on <em>Promoting and Protecting Human Rights: a Global Overview</em> is free and open to participants (students; governmental, inter-governmental and non-governmental staff; social workers; researchers; committed citizens…) from all over the world who are actively interested and engaged in human rights work and wish to gain a general overview of historical and current developments at the international and regional level.</p>
-<p class="margin_bottom_20">The course is offered on <a class="titolo_gc_europe" href="https://edx.gchumanrights.org/pphr" target="_blank">OpenEdX</a>, the open source platform of EdX which is one of the leading providers of open online learning. With a user-friendly and innovative interface, our course offers an interactive and engaging learning experience without geographical limitations, allowing participants to enjoy being part of a truly global network of experts and committed human rights defenders.</p>
-<p><strong>Course dates:</strong> from June 2020, on a rolling basis.
-<p class="margin_bottom_20"><strong><a href="https://edx.gchumanrights.org/pphr" class="titolo_gc_europe" target="_blank">Free enrolment</a></strong> from 1 June 2020.</p>
+<!-- MENU -->
+<aside class="spalla_sx spalla_gc">
+    <nav class="mod_customnav tab_spalla block">
+        {{insert_module::197}}
+    </nav>
+    <div class="ce_text deadline block">
+        <p class="margin_bottom_5">Course dates:</p>
+        <p class="description_blu_container titolo_gc_europe">From June 2020</p>
+    </div>
+    <div class="ce_text block">
+        <!--<div class="blocco_sconto">
+        <p class="name_quote">Stay tuned for new editions</p>
+    </div>-->
+        <p><a href="https://edx.gchumanrights.org/pphr" target="_blank"><button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Enrol</button> </a></p>
+    </div>
+</aside>
+
+
+<!-- Page Content -->
+<section class="container no_margin_bottom">
+    <div class="ce_text cta_mobile block">
+        <div class="deadline_blocco_sconto">
+            <div class="deadline">
+                <p class="margin_bottom_5">Course dates:</p>
+                <p class="description_blu_container titolo_gc_europe">From June 2020</p>
+            </div>
+            <!--<div class="blocco_sconto">
+                <p class="name_quote">Stay tuned for new editions</p>
+            </div>-->
+        </div>
+        <p><a href="https://edx.gchumanrights.org/pphr" target="_blank"><button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Enrol</button> </a></p>
+    </div>
+    <div class="ce_text block">
+        <div class="title_page_programme_e_logo">
+            <h3 class="title_page_programme_mooc_pphr titolo_gc_europe">Promoting and Protecting Human Rights: a Global Overview</h3>
+        </div>
+    </div>
+    <p class="subtitle_page_programme">How to Enrol</p>
+    <p class="margin_bottom_20">The MOOC on <em>Promoting and Protecting Human Rights: a Global Overview</em> is free and open to participants (students; governmental, inter-governmental and non-governmental staff; social workers; researchers; committed citizens…) from all over the world who are actively interested and engaged in human rights work and wish to gain a general overview of historical and current developments at the international and regional level.</p>
+    <p class="margin_bottom_20">The course is offered on <a class="titolo_gc_europe" href="https://edx.gchumanrights.org/pphr" target="_blank">OpenEdX</a>, the open source platform of EdX which is one of the leading providers of open online learning. With a user-friendly and innovative interface, our course offers an interactive and engaging learning experience without geographical limitations, allowing participants to enjoy being part of a truly global network of experts and committed human rights defenders.</p>
+    <p><strong>Course dates:</strong> from June 2020, on a rolling basis.
+        <p class="margin_bottom_20"><strong><a href="https://edx.gchumanrights.org/pphr" class="titolo_gc_europe" target="_blank">Free enrolment</a></strong> from 1 June 2020.</p>
+</section>
