--- a/website/02-Education/hrda/staff.html
+++ b/website/02-Education/hrda/staff.html
@@ -1,7 +1,5 @@
-<p>
-    <strong>HRDA Staff</strong>
-    
-</p>
+<p class="subtitle_page_programme">HRDA Staff</p>
+
 <p>
     <strong>Program Manager:</strong>
     
@@ -15,8 +13,8 @@
 <p>
     Fax: +27 (0) 86 580 5743
 </p>
-<p>
-    <a href="mailto:ashwanee.budoo@up.ac.za"><u>ashwanee.budoo@up.ac.za</u></a>
+<p class="margin_bottom_20">
+    <a class="titolo_gc_africa" href="mailto:ashwanee.budoo@up.ac.za"><u>ashwanee.budoo@up.ac.za</u></a>
 </p>
 <p>
     <strong>Program Coordinator</strong>
@@ -31,8 +29,8 @@
 <p>
     Fax: +27 (0) 86 580 5743
 </p>
-<p>
-    <a href="mailto:johannes.buabeng-baidoo@up.ac.za">
+<p class="margin_bottom_20">
+    <a class="titolo_gc_africa" href="mailto:johannes.buabeng-baidoo@up.ac.za">
         johannes.buabeng-baidoo@up.ac.za
     </a>
 </p>
@@ -49,8 +47,8 @@
 <p>
     Fax: +27 (0) 86 580 5743
 </p>
-<p>
-    <a href="mailto:magnus.killander@up.ac.za">
+<p class="margin_bottom_20">
+    <a class="titolo_gc_africa" href="mailto:magnus.killander@up.ac.za">
         <u>magnus.killander@up.ac.za</u>
     </a>
 </p>
@@ -67,8 +65,8 @@
 <p>
     Fax: +27 (0) 86 580 5743
 </p>
-<p>
-    <a href="mailto:Tresor.Makunya@up.ac.za"><u>Tresor.Makunya@up.ac.za</u></a>
+<p class="margin_bottom_20">
+    <a class="titolo_gc_africa" href="mailto:Tresor.Makunya@up.ac.za"><u>Tresor.Makunya@up.ac.za</u></a>
 </p>
 <p>
     Ms Marystella Auma Simiyu
@@ -79,8 +77,8 @@
 <p>
     Fax: +27 (0) 86 580 5743
 </p>
-<p>
-    <a href="mailto:marystella.simiyu@up.ac.za">
+<p class="margin_bottom_20">
+    <a class="titolo_gc_africa" href="mailto:marystella.simiyu@up.ac.za">
         <u>marystella.simiyu@up.ac.za</u>
     </a>
 </p>
@@ -93,8 +91,8 @@
 <p>
     Fax: +27 (0) 86 580 5743
 </p>
-<p>
-    <a href="mailto:susan.mutambasere@up.ac.za">
+<p class="margin_bottom_20">
+    <a class="titolo_gc_africa" href="mailto:susan.mutambasere@up.ac.za">
         <u>susan.mutambasere@up.ac.za</u>
     </a>
 </p>
@@ -107,6 +105,6 @@
 <p>
     Fax: +27 (0) 86 580 5743
 </p>
-<p>
-    <a href="mailto:maryauma92@yahoo.com"><u>maryauma92@yahoo.com</u></a>
+<p class="margin_bottom_20">
+    <a class="titolo_gc_africa" href="mailto:maryauma92@yahoo.com"><u>maryauma92@yahoo.com</u></a>
 </p>
